# utils-lib

./: .drone.yml  CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  makefile  rust-toolchain.toml  search-index.js  settings.html  src-files.js  utility.mk
.github/: dependabot.yml
.github/workflows/: coverage.yml  fmt.yml  rust.yml  rust_doc.yml  rust_doc_check.yml
derive/: Cargo.toml  README.md
derive/examples/: getter.rs  trait_sealed.rs
derive/src/: lib.rs  sealed.rs
derive/src/getter/: attribute_option.rs  const_ty.rs  error.rs  field.rs  getter_ty.rs  ident_option.rs  mod.rs  name.rs  option.rs  option_enum.rs  self_ty.rs  syntax.rs  visibility.rs  which_getter.rs
derive/src/new/: attribute.rs  field.rs  mod.rs  option.rs  option_enum.rs  option_struct.rs
derive/src/test/: mod.rs
derive/ui_test/fail/: get.rs  get.stderr  get_const.rs  get_const.stderr  get_enum.rs  get_enum.stderr  get_move_on_ref.rs  get_move_on_ref.stderr  get_repetition.rs  get_repetition.stderr  get_type.rs  get_type.stderr  get_unacceptable_parse_error.rs  get_unacceptable_parse_error.stderr  get_visibility.rs  get_visibility.stderr  trait_sealed.rs  trait_sealed.stderr
derive/ui_test/pass/: get.rs  get_const.rs  get_mut.rs  get_name.rs  get_visibility.rs  sealed.rs  trait_sealed.rs
macro-utils/: CHANGELOG.md  Cargo.toml  README.md
macro-utils/src/: lib.rs  macro_def.rs
macro-utils/src/field/: mod.rs
macro-utils/src/test/: mod.rs
macro_utils/: all.html  index.html  macro.getter.html  macro.quote_compile_error!.html  macro.quote_compile_error.html  sidebar-items.js
macro_utils/field/: enum.FieldName.html  index.html  sidebar-items.js  struct.Field.html  struct.FieldInformation.html
src/: coordinate.rs  error.rs  lib.rs  macro_def.rs
src/coordinate/: axis_2d.rs  iterator.rs  mod.rs
src/macro_utils/: lib.rs.html  macro_def.rs.html
src/number/: fuction.rs  function.rs  mod.rs  num_op_traits.rs  sign.rs
src/utils_lib/: error.rs.html  lib.rs.html  macro_def.rs.html
src/utils_lib_derive/: lib.rs.html  sealed.rs.html
utils_lib/: all.html  derive.Getter.html  derive.Sealed.html  index.html  macro.impl_op_trait!.html  macro.impl_op_trait.html  macro.trait_sealed.html  sidebar-items.js
utils_lib/coordinate/: enum.Axis2D.html  index.html  sidebar-items.js  (+2 more)
utils_lib_derive/: all.html  derive.Getter.html  derive.Sealed.html  index.html  macro.trait_sealed!.html  macro.trait_sealed.html  sidebar-items.js
(+128 files in other folders)
