[package]
name = "utils-lib"
version = "0.1.0"
edition = "2021"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
readme = "README.md"
repository = "https://git.noxie.ch/ABouttefeux/utils-lib"
license = "MIT OR Apache-2.0"

[workspace]
members = ["derive", "macro-utils"]


[dependencies]


[dev-dependencies]
version-sync = "0.9.4"