[package]
name = "utils-lib"
version = "0.1.0"
edition = "2021"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
readme = "README.md"
repository = "https://git.noxie.ch/ABouttefeux/utils-lib"
license = "MIT OR Apache-2.0"
publish = false


[features]
serde = ["dep:serde"]
default = ["serde"]


[workspace]
members = ["derive", "macro-utils"]


[dependencies]
num-traits = "0.2.16"
serde = { version = "1.0", features = ["derive"], optional = true }


[dev-dependencies]
version-sync = "0.9.4"


[profile.release]
lto = true
