[package]
name = "macro-utils"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2021"
description = "Set of utils for procedural macro"
repository = "https://git.noxie.ch/ABouttefeux/utils-lib"
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[dev-dependencies]
version-sync = "0.9.4"
